--- a/action.yml
+++ b/action.yml
@@ -17,5 +17,7 @@ runs:
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
       shell: bash
+    - shell:
+        echo "Auf Wiedersehen"
     - run: ${{ github.action_path }}/goodbye.sh
       shell: bash
